kubehw/lab4/svc-frontend.yml
apiVersion: v1

kind: Service

metadata:
    name: frontend-service

spec:
    type: ClusterIP
    ports:
        - targetPort: 3000
          port: 3000

    selector:
        app: my-frontend
        type: frontend
