kubehw/lab4/ingress-svc.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
    rules:
        - http:
            paths:
                - path: /api/?(.*)
                  backend:
                    serviceName: backend-service
                    servicePort: 8080
                - path: /(.*)
                  backend:
                    serviceName: frontend-service
                    servicePort: 3000
